# RustOwen

./: .gitignore  README.md  build.rs  users.db  说明.txt
Demo/: Cargo.toml  build.rs  users.db  说明.txt
Demo/libs/: sqlite3.lib
MysqlAPI/: .env  Cargo.toml  Dockerfile  DockerfileRelease  config.json  config.yaml  docker-compose.yml  linux.txt  readme.txt  rust使用大全.txt  windows.txt
MysqlAPI/migrations/: 20230123154041_init.up.sql  libitem.sql
MysqlAPI/src/: main.rs
MysqlAPI/src/configs/: envconfig.rs  mod.rs  ratelimitconfig.rs
MysqlAPI/src/handlers/: auth_handler.rs  base_handle.rs  libitem_handler.rs  mod.rs  note_handler.rs  rabbitmq_handle.rs  router_handler.rs  web_handler.rs  websocket_handler.rs
MysqlAPI/src/middlewares/: auth_middleware.rs  jwt.rs  limit.rs  limit_middleware.rs  limiter.rs  mod.rs
MysqlAPI/src/models/: apiresponse_model.rs  appstate_model.rs  claims_model.rs  config_model.rs  libitem_model.rs  mod.rs  note_model.rs  rabbitmq_model.rs  redisclient_model.rs  static_model.rs
MysqlAPI/src/schemas/: libitem_schema.rs  mod.rs  note_schema.rs  rabbitmq_schema.rs  request.txt
MysqlAPI/src/test/: a_testdemo.rs  exceltest.rs  jsontest.rs  mod.rs  printtest.rs  redistest.rs  rust_test.rs  rusttest.rs  testdemo.rs  testindex.rs
MysqlAPI/src/utils/: file_utils.rs  jwt_utils.rs  localtimeutils.rs  mod.rs  naivedatetimeutils.rs  rabbitmq_client.rs  redis_client.rs  redis_client.rs111  string_utils.rs  timeutils.rs  websockethelper.rs
MysqlAPI/vscodelinux/: launch.json  tasks.json
PSsqlAPI/: .env  Cargo.toml
PSsqlAPI/migrations/: libitem.sql
PSsqlAPI/src/: main.rs
PSsqlAPI/src/handlers/: libitem_handler.rs  web_handler.rs
PSsqlAPI/src/models/: libitem_model.rs  mod.rs
RustActixAPI/: .env  Cargo.toml  readme.txt
RustActixAPI/src/: handler.rs  main.rs
RustActixMysqlAPI/: Cargo.toml  readme.txt
RustActixMysqlAPI/src/: main.rs
actix_web_api/: .env  Cargo.toml  Dockerfile  说明.txt
actix_web_api/src/: main.rs
actix_web_api/src/config/: mod.rs
actix_web_api/src/db/: mod.rs
actix_web_api/src/models/: libitem.rs
actix_web_api/src/repository/: libitem_repository.rs
actix_web_api/src/routes/: libitem_routes.rs
actix_web_api/src/services/: libitem_service.rs
actix_web_api/src/utils/: auth_middleware.rs
my_info_system/: Cargo.toml  README.md
my_info_system/libs/: sqlite3.exp
my_info_system/src/: db.rs  db_operations.rs  main.rs
(+14 files in other folders)
