[package]
name = "rust-mysql-sqx-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.2.1"
actix-service = "2.0" # 添加 actix-service 依赖
futures = "0.3" # 添加 futures crate
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = [
    "runtime-async-std-native-tls",
    "mysql",
    "uuid",
    "chrono",
] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
ahash = "0.7.5" # or a different version that's stable
proc-macro2 = { version = "1.0.50", default-features = false }
jsonwebtoken = "8.1" # 添加这个依赖
regex = "1"
redis = { version = "0.27.6", features = ["aio", "tokio-comp"] }
tokio = { version = "1", features = ["full"] }
async-std = "1.10"
once_cell = "1.10.0" # 添加 once_cell 库
deadpool-redis = "0.10"
calamine = "0.18"

lapin = "2.0"
log = "0.4"
futures-util = "0.3"
lazy_static = "1.4"
