[package]
name = "actix_web_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
diesel = { version = "2.0", features = ["mysql"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
actix-rt = "2.5.0"
dotenv = "0.15"
jsonwebtoken = "7.2.0"
tokio = { version = "1", features = ["full"] }
actix-identity = "0.2"
